# ver-opina

./: .dockerignore  Dockerfile  Makefile  build.sh  docker-compose.yml  fly.toml  keygen.py  render.yaml  variables.env
landing/: pyproject.toml  run.sh
landing/candidate/: crawler.py  models.py  wagtail_hooks.py
landing/candidate/migrations/: 0001_initial.py  0002_candidate_candidate_nick_candidate_election_number_and_more.py  0002_candidatepage_image.py  0003_alter_party_party_description.py  0003_party_alter_candidatepage_party.py  0004_alter_candidatepage_data_alter_candidatepage_party.py  0004_remove_candidate_image_and_more.py  0005_candidate_municipio.py  0005_remove_candidatepage_data.py  0006_rename_candidate_name_candidate_name_and_more.py  0007_candidate_election_candidate_region_candidate_state_and_more.py  0008_remove_candidate_state_alter_candidate_region_and_more.py  0009_remove_candidate_election.py
landing/home/: models.py  views.py
landing/home/migrations/: 0001_initial.py  0002_create_homepage.py  0002_remove_landingpage_search_image.py  0003_create_superuser.py  0004_landingpage_subheading.py  0005_alter_landingpage_heading_and_more.py  0006_alter_landingpage_heading_and_more.py  0007_alter_landingpage_heading_and_more.py
landing/landing/: urls.py
landing/landing/settings/: base.py  dev.py  production.py
landing/landing/templates/: base.html  footer.html  header.html
landing/landing/templatetags/: candidate_card.py  heading.py  results.py  subheading.py
landing/tournament/: forms.py  models.py  views.py  wagtail_hooks.py
(+23 files in other folders)
